// Vitest Snapshot v1

exports[`search > should with namespace & collapse 1`] = `
[
  {
    "as": "NestCounter",
    "defaultImport": true,
    "from": "src/components/nest/Counter.svelte",
  },
  {
    "as": "NestHeader",
    "defaultImport": true,
    "from": "src/components/nest/Header.svelte",
  },
]
`;

exports[`search > should with namespace 1`] = `
[
  {
    "as": "NestCounter",
    "defaultImport": true,
    "from": "src/components/nest/Counter.svelte",
  },
  {
    "as": "NestHeader",
    "defaultImport": true,
    "from": "src/components/nest/Header.svelte",
  },
]
`;

exports[`search > should work 1`] = `
[
  {
    "as": "Counter",
    "defaultImport": true,
    "from": "src/components/nest/Counter.svelte",
  },
  {
    "as": "Header",
    "defaultImport": true,
    "from": "src/components/nest/Header.svelte",
  },
]
`;
